# news-factchecker-mcp

./: .gitignore  DIVE_Config_Summary.md  Fedora_Dive_sample_test.txt  Fedora_Dive_sample_test2.txt  Fedora_mcp.config.json  LICENSE  README.md  config_json_mcp.txt  mcp.config.json  mcp.servers.json  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
src/: pyproject.toml
src/factchck/: news_factcheck.py
src/factcheck/: news_factcheck.py
src/tests/: test_api_connectivity.py  test_news_factcheck.py
