[project]
name = "factchck"
version = "3.0.0"
description = "A modern MCP server for fact-checking news headlines using AI and web search"
readme = "../../README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.9.4",
    "google-generativeai>=0.8.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
factchck = "factchck.news_factcheck:main"
